fixed wrapping target shifts the target bug

--- a/pub/note-styles.css
+++ b/pub/note-styles.css
@@ -111,7 +111,7 @@
 /* ------- ATTACH TO ELEMENT POSITIONS --------*/
 
 .target-wrapper {
-  position: relative;
+  position: absolute;
   display: inline-block;
 }
 
